@@ -10,8 +10,8 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -19,8 +19,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -28,14 +28,15 @@ public class DepartmentsTest {
     @Test
     public void whenSortDepartmentAsc() {
         List<String> input = Arrays.asList("K1/SK1", "K1", "K2/SK1", "K2");
-        List<String> expect = Arrays.asList("K1", "K1/SK1", "K2", "K2/SK1");
+        List<String> expect = List.of("K1", "K1/SK1", "K2", "K2/SK1");
         List<String> result = Departments.sortAsc(input);
+        Departments.sortAsc(result);
         assertThat(result, is(expect));
     }
     @Test
     public void whenSortDepartmentDesc() {
         List<String> input = Arrays.asList("K1/SK1", "K1", "K2/SK1", "K2");
-        List<String> expect = Arrays.asList("K2", "K2/SK1", "K1", "K1/SK1");
+        List<String> expect = List.of("K2", "K2/SK1", "K1", "K1/SK1");
         List<String> result = Departments.sortDesc(input);
         assertThat(result, is(expect));
     }
